20030807
 - (dtucker) [session.c] Have session_break_req not attempt to send a break
   if TIOCSBRK and TIOCCBRK are not defined (eg Cygwin).
 - (dtucker) [canohost.c] Bug #336: Only check ip options if IP_OPTIONS is
   defined (fixes compile error on really old Linuxes).
 - (dtucker) [defines.h] Bug #336: Add CMSG_DATA and CMSG_FIRSTHDR macros if
   not already defined (eg Linux with some versions of libc5), based on those
   from OpenBSD.
 - (dtucker) [openbsd-compat/bsd-cygwin_util.c openbsd-compat/bsd-cygwin_util.h]
   Remove incorrect filenames from comments (file names are in Id tags).
 - (dtucker) [session.c openbsd-compat/bsd-cygwin_util.h] Move Cygwin
   specific defines and includes to bsd-cygwin_util.h.  Fixes build error too.

20030802
 - (dtucker) [monitor.h monitor_wrap.h] Remove excess ident tags.
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/07/22 13:35:22
     [auth1.c auth.h auth-passwd.c monitor.c monitor.h monitor_wrap.c
     monitor_wrap.h readconf.c readconf.h servconf.c servconf.h session.c ssh.1
     ssh.c ssh_config.5 sshconnect1.c sshd.c sshd_config.5 ssh.h]
     remove (already disabled) KRB4/AFS support, re-enable -k in ssh(1);
     test+ok henning@
 - (dtucker) [Makefile.in acconfig.h configure.ac] Remove KRB4/AFS support.
 - (dtucker) [auth-krb4.c radix.c radix.h] Remove KRB4/AFS specific files.
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/07/23 07:42:43
     [sshd_config]
     remove AFS; itojun@
   - djm@cvs.openbsd.org 2003/07/28 09:49:56
     [ssh-keygen.1 ssh-keygen.c]
     Support for generating Diffie-Hellman groups (/etc/moduli) from ssh-keygen.
     Based on code from Phil Karn, William Allen Simpson and Niels Provos.
     ok markus@, thanks jmc@
   - markus@cvs.openbsd.org 2003/07/29 18:24:00
     [LICENCE progressmeter.c]
     replace 4 clause BSD licensed progressmeter code with a replacement
     from Nils Nordman and myself; ok deraadt@