@@ -1,3 +1,8 @@
+20030808
+ - (dtucker) [openbsd-compat/fake-rfc2553.h] Older Linuxes have AI_PASSIVE and
+   AI_CANONNAME in netdb.h but not AI_NUMERICHOST, so check each definition
+   separately before defining them.
+
 20030807
  - (dtucker) [session.c] Have session_break_req not attempt to send a break
    if TIOCSBRK and TIOCCBRK are not defined (eg Cygwin).
@@ -798,4 +803,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2884 2003/08/07 06:28:16 dtucker Exp $
+$Id: ChangeLog,v 1.2885 2003/08/08 02:15:11 dtucker Exp $
